tests/data/placebo/test_network_location_sg_cardinality/ec2.CreateNetworkInterface_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {},
    "NetworkInterface": {
      "Status": "pending",
      "MacAddress": "02:db:1c:8d:30:f0",
      "SourceDestCheck": true,
      "AvailabilityZone": "us-east-1c",
      "Description": "",
      "NetworkInterfaceId": "eni-fe20dfe9",
      "PrivateIpAddresses": [
        {
          "Primary": true,
          "PrivateIpAddress": "10.4.9.159"
        }
      ],
      "RequesterManaged": false,
      "SubnetId": "subnet-5a24303f",
      "VpcId": "vpc-6c63dd15",
      "RequesterId": "AIDAIYEUEZZQWE5TZHHAE",
      "Groups": [
        {
          "GroupName": "db-tier",
          "GroupId": "sg-37278946"
        },
        {
          "GroupName": "web-tier",
          "GroupId": "sg-c253fdb3"
        }
      ],
      "Ipv6Addresses": [],
      "OwnerId": "644160558196",
      "TagSet": [],
      "PrivateIpAddress": "10.4.9.159"
    }
  }
}
