tests/data/placebo/test_network_location_sg_cardinality/ec2.CreateSecurityGroup_1.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-c253fdb3",
    "ResponseMetadata": {}
  }
}
