tests/data/placebo/test_network_location_sg_cardinality/ec2.CreateSecurityGroup_2.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-37278946",
    "ResponseMetadata": {}
  }
}
