tests/data/placebo/test_network_location_sg_cardinality/ec2.CreateSubnet_1.json
{
  "status_code": 200,
  "data": {
    "Subnet": {
      "AvailabilityZone": "us-east-1c",
      "AvailableIpAddressCount": 251,
      "DefaultForAz": false,
      "Ipv6CidrBlockAssociationSet": [],
      "VpcId": "vpc-6c63dd15",
      "State": "pending",
      "MapPublicIpOnLaunch": false,
      "SubnetId": "subnet-5a24303f",
      "CidrBlock": "10.4.9.0/24",
      "AssignIpv6AddressOnCreation": false
    },
    "ResponseMetadata": {}
  }
}
