tests/data/placebo/test_network_location_sg_cardinality/ec2.CreateTags_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "0e81be87-c93e-4880-8e50-0af53ea55fc1", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 30 May 2017 01:17:31 GMT"
            }
        }
    }
}
