tests/data/placebo/test_network_location_sg_cardinality/ec2.CreateTags_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "6a202153-6f1c-4c0b-adae-def2d02b68a3", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 26 Jun 2017 18:46:19 GMT"
            }
        }
    }
}
