tests/data/placebo/test_network_location_sg_cardinality/ec2.DeleteNetworkInterface_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "60c4b7ab-4fe6-4c98-8a0b-8320953e4786", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 26 Jun 2017 18:46:22 GMT"
            }
        }
    }
}
