tests/data/placebo/test_network_location_sg_cardinality/ec2.DeleteSecurityGroup_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "ab7ab33a-335f-4804-90c1-f7eb7c2fc3fb", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 26 Jun 2017 18:46:22 GMT"
            }
        }
    }
}
