tests/data/placebo/test_network_location_sg_cardinality/ec2.DeleteSecurityGroup_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "c7f5ac81-846c-4640-83f6-5e83566daff0", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 26 Jun 2017 18:46:23 GMT"
            }
        }
    }
}
