tests/data/placebo/test_network_location_sg_cardinality/ec2.DeleteVpc_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "268c0777-04ab-4162-af94-ea198df27b4b", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 26 Jun 2017 18:46:23 GMT"
            }
        }
    }
}
