tests/data/placebo/test_network_location_sg_cardinality/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "for dbs",
        "Tags": [
          {
            "Value": "db",
            "Key": "Location"
          }
        ],
        "IpPermissions": [],
        "GroupName": "db-tier",
        "VpcId": "vpc-6c63dd15",
        "OwnerId": "644160558196",
        "GroupId": "sg-37278946"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "for apps",
        "Tags": [
          {
            "Value": "web",
            "Key": "Location"
          }
        ],
        "IpPermissions": [],
        "GroupName": "web-tier",
        "VpcId": "vpc-6c63dd15",
        "OwnerId": "644160558196",
        "GroupId": "sg-c253fdb3"
      }
    ],
    "ResponseMetadata": {}
  }
}
