tests/data/placebo/test_network_location_sg_cardinality/ec2.DescribeSubnets_1.json
{
  "status_code": 200,
  "data": {
    "Subnets": [
      {
        "AvailabilityZone": "us-east-1c",
        "Tags": [
          {
            "Value": "web",
            "Key": "Location"
          }
        ],
        "AvailableIpAddressCount": 250,
        "DefaultForAz": false,
        "Ipv6CidrBlockAssociationSet": [],
        "VpcId": "vpc-6c63dd15",
        "State": "available",
        "MapPublicIpOnLaunch": false,
        "SubnetId": "subnet-5a24303f",
        "CidrBlock": "10.4.9.0/24",
        "AssignIpv6AddressOnCreation": false
      }
    ],
    "ResponseMetadata": {}
  }
}
