tests/data/placebo/test_network_location_sg_cardinality/tagging.GetResources_1.json
{
    "status_code": 200, 
    "data": {
        "PaginationToken": "", 
        "ResourceTagMappingList": [
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-2c4a6551", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-37278946", 
                "Tags": [
                    {
                        "Value": "db", 
                        "Key": "Location"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-424a653f", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-5d4a6520", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-704f840d", 
                "Tags": [
                    {
                        "Value": "Duper", 
                        "Key": "Super"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-854a65f8", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-8a4b64f7", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-a14a65dc", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-bf4a65c2", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-c253fdb3", 
                "Tags": [
                    {
                        "Value": "web", 
                        "Key": "Location"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-f8c78787", 
                "Tags": [
                    {
                        "Value": "FancyTestGroupPublic", 
                        "Key": "Name"
                    }, 
                    {
                        "Value": "Public", 
                        "Key": "NetworkLocation"
                    }
                ]
            }, 
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-ff4a6582", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ]
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "bf677dbb-5a9f-11e7-a7ba-f3a22e7ea338", 
            "HTTPHeaders": {
                "x-amzn-requestid": "bf677dbb-5a9f-11e7-a7ba-f3a22e7ea338", 
                "date": "Mon, 26 Jun 2017 18:46:20 GMT", 
                "content-length": "1687", 
                "content-type": "application/x-amz-json-1.1"
            }
        }
    }
}
