tests/data/placebo/test_network_location_sg_cardinality/tagging.TagResources_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {
      "RetryAttempts": 0,
      "HTTPStatusCode": 200,
      "RequestId": "58aebcc6-5eab-4565-b50c-873da5d26222",
      "HTTPHeaders": {
        "server": "AmazonEC2",
        "content-type": "application/x-amz-json-1.1",
        "date": "Mon, 26 Jun 2017 18:46:19 GMT",
        "content-length": "25",
        "x-amzn-requestid": "58aebcc6-5eab-4565-b50c-873da5d26222"
      }
    }
  }
}
