tests/data/placebo/test_network_location_sg_cardinality/tagging.TagResources_2.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {
      "RetryAttempts": 0,
      "HTTPStatusCode": 200,
      "RequestId": "6a202153-6f1c-4c0b-adae-def2d02b68a3",
      "HTTPHeaders": {
        "server": "AmazonEC2",
        "content-type": "application/x-amz-json-1.1",
        "date": "Mon, 26 Jun 2017 18:46:19 GMT",
        "content-length": "25",
        "x-amzn-requestid": "6a202153-6f1c-4c0b-adae-def2d02b68a3"
      }
    }
  }
}
